[package]
name = "blithaven"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "2d render"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
earcutr = "0.4.2"
rand = "0.8.5"
image = "0.24.7"
specs = "0.19.0"
